# otus-cpp-16

./: .travis.yml  CMakeLists.txt  README.md  bintray.json  conanfile.txt
data/: sample_data.txt  sample_input.txt
inc/: clusterer.hpp  flat.hpp  get_args.hpp  utility.hpp
src/: clusterer.cpp  flat.cpp  get_args.cpp  rclss.cpp  rclst.cpp
utils/: make_data.py
